<resources>
    <string name="app_name">Notes Pro</string>
    <string name="hello">Hello.</string>
    <string name="let_s_start">Let\'s start</string>
    <string name="email_id">Email id</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="add_new_note">Add New Note</string>
    <string name="content">Content</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="all_notes">All notes</string>
    <string name="new_note">New note</string>
    <string name="save">Save</string>
</resources>