<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteDetailsActivity"
    android:background="@color/white"
    android:padding="16dp"
    >

    <RelativeLayout
        android:id="@+id/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/page_title"
            android:text="@string/new_note"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="13sp"
            android:layout_toStartOf="@+id/save_note_button"
            android:textColor="@color/black"
            android:layout_centerVertical="true"

            />

        <ImageButton
            android:id="@+id/save_note_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/save_icon"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="@color/black" />


    </RelativeLayout>
    
    
    <LinearLayout
        android:id="@+id/note_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar_layout"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginVertical="40dp"
        android:backgroundTint="@color/my_secondary"
        android:background="@drawable/rectangular_resource">

        <EditText
            android:id="@+id/txt_notetitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            android:textColor="@color/black"/>


        <EditText
            android:id="@+id/txt_notescontent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content"
            android:textSize="18sp"
            android:gravity="top"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            android:textColor="@color/black"
            android:minLines="12"/>



    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_button"
        android:layout_alignBottom="@+id/note_layout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:backgroundTint="@color/my_third"
        android:layout_centerHorizontal="true"
        android:text="Delete"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:layout_marginBottom="35dp"
        android:textSize="20dp"
        />



</RelativeLayout>