<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="16dp"
    android:layout_marginHorizontal="32dp"
    tools:context=".CreateAcoountActivity">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="32dp"
        android:id="@+id/login_icn"
        android:src="@drawable/signup"/>



    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_icn"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textSize="32sp"
            android:textStyle="bold"
            android:id="@+id/text1"
            />

        <TextView
            android:id="@+id/text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_start"
            android:textSize="32sp"
            android:textStyle="bold"
            />



       </LinearLayout>



    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll1"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@drawable/rounded_corner"
            />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint=" Password"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@drawable/rounded_corner"
            />

        <EditText
            android:id="@+id/et_cpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint=" Confirm Password"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@drawable/rounded_corner"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_createA"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:text="Create account"
            android:textSize="20dp"
            android:padding="10dp"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@id/ll2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account ?"/>

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Login."
            android:textColor="@color/my_primary"
            android:textStyle="bold"/>


    </LinearLayout>








</RelativeLayout>